Home/static/css/index.css
* {
    box-sizing: border-box;
    margin: 0;
    outline: none;
}

html {
    margin:0;
    padding:0;
    height:100%;
    scroll-behavior: smooth;
    scrollbar-color:#1d1d1d black;
}

body {
    height: 100vh;
    /* background: linear-gradient(to right, blueviolet, #4158d0); */
    background: #1d1d1d;
    font-family: Poppins, sans-serif;
    color: white;
}

a { 
    font-size: 13px;
    color: darksalmon; 
}

.body_link { font-size: 15px; }

a:hover {
    color: #e2ac99;
    text-decoration: none;
}

span { color: white; }

input {
	outline: none;
	border: none;
}

::selection {
    background: #1d1d1d;
    color: white;
}

.sticky-top {
    position: fixed;
    width: 100%;
    z-index: 0;
}

.card { 
    border: none; 
    background: transparent; 
}

.come-in {
    transform: translateY(150px);
    animation: come-in 0.8s ease forwards;
}
.come-in:nth-child(odd) {
    animation-duration: 0.6s; /* So they look staggered */
}
  
@keyframes come-in {
    to { transform: translateY(0); }
}

.card::-webkit-scrollbar { width: 0 !important; }

.card {
    scrollbar-color: #1d1d1d black;
}

.card-body::-webkit-scrollbar { width: 0 !important; }

.card-body {
    scrollbar-color: #1d1d1d black;
}

.display-2 {
    font-size: 25px;
}

button:focus { outline: none; }

.btn-dark {
    background: mediumslateblue;
    border-radius: 2.25rem;
    color: white;
    border: none;
    outline: none;
}

.btn-dark:hover {
    color: white;
    background-color: darkslateblue;
    border: none;
    outline: none;
}

.btn-dark.focus, .btn-dark:focus {
    box-shadow: none;
}

h1 { font-size: 30px; }
h3 { font-size: 19px; }
h4 { font-size: 17px; }
h5 { font-size: 15px; }
h6 { font-size: 11.2px; }

.container-fluid {
    display: flex;
    flex-direction: column;
}

/* ------------ flex-items-container ------------- */
.loader {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transition: 1s;
    z-index: 999;
}
/* ----------------------------------------------- */

/* ------------ flex-items-container ------------- */
.flex-items-container {
    flex-wrap: wrap-reverse;
    flex-direction: row;
    margin-top: 8%;
}
/* ----------------------------------------------- */

/*------------- success-notification --------------*/
.indicator, .p-chat-notif-indicator {
    position: fixed;
    z-index: 2000;
    top: 15px;
    text-align: center;
    overflow: hidden;
    display: none;
    transition: height 1s;
}

.p-chat-notif-indicator {
    display: flex;
    width: 100%;
    justify-content: center;
}
  
.notif-active {
    display: flex;
    justify-content: center;
    align-self: center;
}

#update-posts {
    height: 0;
    display: flex;
    justify-content: center;
    align-self: center;
    display: none;
}

.lnr-redo {
    height: 23px;
    width: 35px;
    position: relative;
    left: 5px;
    fill: white;
    transition: transform 0.5s ease;
    transform-origin: center center;
    transform-style: preserve-3d;
}

#update-posts:hover .alert-success {
    background: mediumpurple;
    border: 3px solid mediumpurple;
}

#update-posts:hover .lnr-redo {
    transform: rotate(620deg);
}

.alert {
    border-radius: 2rem;
    margin-bottom: 0rem;
    color: white;
    transition: all 0.3s;
}
  
.alert-success {
    background-color: mediumseagreen;
    border: 3px solid mediumseagreen;
}

.alert-error {
    background-color: orangered;
    border: 3px solid orangered;
}

.close, .close:focus {
    outline: none;
    border: none;
    margin-left: 20px;
    position: relative;
    top: 1px;
}
/*------------------------------------------------*/

/* ----------------- nav links ------------------ */
.lnr-menu {
    height: 27px;
    width: 40px;
    fill: currentColor;
    color: white;
    transition: transform 0.3s;
}

.navbar-toggler:active .lnr-menu {
    transform: rotate(90deg);
}

.navbar {
    padding: 10px 68px 0px 68px;
    display: flex;
    flex-direction: row;
    z-index: 2;
    transition: 0.3s;
}

#brand-ico { 
    height: 32px; 
    transition: 0.3s;
}

.navbar-brand {
    font-family: 'Barriecito', cursive;
    font-size: 25px;
    transition: 0.3s;
}

#brand-name {
    font-family: 'Barriecito', cursive;
    color: darksalmon; 
}

#brand-name:hover {
    color: #e2ac99;
}

.navbar-profile-pic {
    height: 32px;
    margin-right: 3px;
    transition: 0.3s;
}

.fa-chevron-right {
    font-size: 12px;
    margin-left: 1px;
    transition: transform 0.3s;
}

.nav-link { 
    color: white;
    font-size: 15px;
}
.nav-link:hover { color: #e2ac99; }

.nav-link:hover .fa-chevron-right {
    transform: rotate(90deg);
}

.dropdown-menu { 
    top: 92%;
    background: black;
    left: -10px;
    text-align: center;
    border-radius: 1rem;
}

.dropdown-item { color: white; }

.dropdown-item:focus, .dropdown-item:hover {
    color: grey;
    text-decoration: none;
    background-color: transparent;
}

.dropdown:hover>.dropdown-menu {
    display: block;
}

.dropdown:hover .fa-chevron-right {
    transform: rotate(90deg);
}
  
.dropdown>.dropdown-toggle:active {
    pointer-events: none;
}

.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
    color: white;
    background-color: transparent;
    opacity: 1;
    padding-left: 2px;
}
  
.nav-pills .nav-link {
    opacity: 0.5;
    padding-left: 2px;
}

.nav-username { display: inline; }
/* ----------------------------------------------- */

/* -------------- That white border -------------- */
.border {
    height: 2px;
    background: white;
}
/* ----------------------------------------------- */

/* --------------- post-container ---------------- */
.post-container {
    display: flex;
    width: 615px;
    height: auto;
    flex-direction: column;
    background: transparent;
    flex-wrap: nowrap;
}

.empty-posts-section {
    display: flex;
    flex-direction: column;
    align-items: center;
}
/* ... */

